# openwurli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/agent-memory/mr-schemey/: MEMORY.md  audit-findings.md
.claude/agents/: circuit-spice.md  mr-schemey.md
.claude/skills/diagnostics/: SKILL.md
.claude/skills/release-readiness/: SKILL.md
.claude/skills/wurli-audit/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/openwurli-dsp/: Cargo.toml
crates/openwurli-dsp/src/: alias_audit.rs  bjt_stage.rs  dk_preamp.rs  dk_preamp_legacy.rs  engine.rs  filters.rs  gen_power_amp.rs  gen_preamp.rs  gen_tremolo.rs  hammer.rs  lib.rs  mlp_correction.rs  mlp_weights.rs  oversampler.rs  pickup.rs  power_amp.rs  preamp.rs  reed.rs  speaker.rs  tables.rs  tremolo.rs  variation.rs  voice.rs
crates/openwurli-dsp/src/dk_preamp/: melange_adapter.rs  mod.rs
crates/openwurli-dsp/tests/: alias_audit_regression.rs
crates/openwurli-dsp/tests/baselines/: alias_audit_v0_5_1.json
crates/openwurli-plugin/: Cargo.toml
crates/openwurli-plugin/src/: lib.rs  params.rs
docs/: README.md  SCHEMATIC_SOURCE.md  TODO-uncertainty-resolution.md  calibration-and-evaluation.md  dk-preamp-derivation.md  dk-preamp-testing.md  how-circuit-modeling-works.md  how-mlp-corrections-work.md  output-stage.md  parameter-tuning-guide.md  pickup-system.md  preamp-circuit.md  reed-and-hammer-physics.md  release-codenames.md  signal-chain-architecture.md  spice-rust-mapping.md
docs/reference/: calibration-and-evaluation.md  dk-preamp-testing.md  parameter-tuning-guide.md  spice-rust-mapping.md
docs/research/: dk-preamp-derivation.md  output-stage.md  pickup-system.md  preamp-circuit.md  reed-and-hammer-physics.md  reed-pickup-displacement.md  signal-chain-architecture.md
ml/: README.md  compute_residuals.py  extract_harmonics.py  extract_notes.py  generate_rust_weights.py  goertzel_utils.py  h3_analysis.py  h3_analysis_v2.py  pipeline.py  render_model_notes.py  score_isolation.py  train_mlp.py
scripts/: release.sh
spice/: PLAN.md
spice/melange/: README.md  wurli-power-amp.cir  wurli-preamp.cir  wurli-tremolo.cir
spice/models/: diodes.lib  ldr_behavioral.lib  transistors.lib
spice/subcircuits/: pickup.cir  power_amp.cir  power_supply.cir  preamp.cir  tremolo_osc.cir
spice/testbench/: approach1_leak.cir  approach2_r10_base.cir  approach3_nodeset.cir  approach4_esr.cir  approach5_emitter_fb.cir  preamp_ac_sweep.cir  preamp_emitter_fb.cir  preamp_harmonics.cir  preamp_ldr_sweep.cir  preamp_transient.cir  run_harmonics.py  tb_dk_ac_extract.cir  tb_dk_validation.cir  tb_full_chain.cir  tb_harmonic_audit.cir  tb_pickup.cir  tb_power_amp.cir  tb_power_supply.cir  tb_preamp_ac.cir  tb_preamp_ac_sweep_ldr.cir  tb_preamp_clipping.cir  tb_preamp_dc.cir  tb_preamp_dc_vs_rldr.cir  tb_preamp_dc_vs_rldr2.cir  tb_preamp_harmonic.cir  tb_preamp_pump_analysis.cir  tb_preamp_pump_transient.cir  tb_preamp_tran.cir  tb_preamp_tran_analysis.cir  tb_preamp_tran_debug.cir  tb_preamp_tran_latchup.cir  tb_preamp_tran_r10_to_base1.cir  tb_preamp_transfer.cir  tb_pump_c8_detail.cir  tb_pump_emit.cir  tb_pump_loaded.cir  tb_pump_pot_effect.cir  tb_real_thd.cir  tb_rldr_transient.cir  tb_tremolo_osc.cir  (+6 more)
tools/: analyze_calibration.py  analyze_pump_dynamics.py  recording_analyzer.py  requirements.txt  schematic_preprocess.py  strip_pedal.py  wurli_compare.py
tools/preamp-bench/: Cargo.toml
tools/preamp-bench/src/: main.rs
tools/reed-renderer/: Cargo.toml
tools/reed-renderer/src/: hammer.rs  main.rs  pickup.rs  reed.rs  tables.rs  variation.rs  voice.rs
tools/reed-renderer/tests/: integration.rs
xtask/: Cargo.toml
