[workspace]
members = [
    "crates/openwurli-dsp",
    "crates/openwurli-plugin",
    "tools/reed-renderer",
    "tools/preamp-bench",
    "xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/hal0zer0/openwurli"
authors = ["hal0zer0"]
