[workspace]
members = [
    "crates/openwurli-dsp",
    "crates/openwurli-plugin",
    "tools/reed-renderer",
    "tools/preamp-bench",
    "xtask",
]
resolver = "2"

[workspace.dependencies]
melange-primitives = { git = "https://github.com/hal0zer0/melange", rev = "4411bb4" }

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
repository = "https://github.com/hal0zer0/openwurli"
authors = ["hal0zer0"]
