[package]
name = "openwurli-dsp"
version = "0.2.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Wurlitzer 200A DSP library — modal synthesis, preamp circuit simulation, tremolo"

[features]
legacy-preamp = []
melange-preamp = []
melange-power-amp = []
melange-tremolo = []

[dependencies]
melange-primitives.workspace = true
