[package]
name = "openwurli-dsp"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Wurlitzer 200A DSP library — modal synthesis, preamp circuit simulation, tremolo"

[features]
legacy-preamp = []
legacy-tremolo = []
legacy-power-amp = []

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(melange_precise_exp)'] }
unused_variables = "allow"

[lints.clippy]
# Melange-generated solvers (gen_preamp.rs, gen_tremolo.rs) emit idiomatic
# MNA/NR code that triggers these lints. Suppressing crate-wide is simpler
# than patching generated output.
needless_range_loop = "allow"
too_many_arguments = "allow"
approx_constant = "allow"
absurd_extreme_comparisons = "allow"
identity_op = "allow"
erasing_op = "allow"
unnecessary_cast = "allow"

[dependencies]
melange-primitives.workspace = true
