[package]
name = "openwurli"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Wurlitzer 200A virtual instrument — CLAP and VST3 plugin"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
openwurli-dsp = { path = "../openwurli-dsp" }
