[package]
name = "openwurli"
version = "0.2.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Wurlitzer 200A virtual instrument — CLAP and VST3 plugin"

[features]
melange-power-amp = ["openwurli-dsp/melange-power-amp"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec", features = ["assert_process_allocs"] }
openwurli-dsp = { path = "../openwurli-dsp" }
