[package]
name = "openwurli"
version = "0.5.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Wurlitzer 200A virtual instrument — CLAP and VST3 plugin"

[features]
default = ["legacy-power-amp"]
legacy-power-amp = ["openwurli-dsp/legacy-power-amp"]
# Opt-in melange 12-node DK preamp solver. Default uses the legacy 8-node
# solver for ~1.6-7× CPU win with no audible tone difference.
melange-preamp = ["openwurli-dsp/melange-preamp"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec", features = ["assert_process_allocs"] }
openwurli-dsp = { path = "../openwurli-dsp" }
