[package]
name = "preamp-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Preamp DSP validation CLI — compare against SPICE reference data"

[dependencies]
openwurli-dsp = { path = "../../crates/openwurli-dsp" }
hound = "3.5"
