[package]
name = "preamp-bench"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Preamp DSP validation CLI — compare against SPICE reference data"

[features]
legacy-preamp = ["openwurli-dsp/legacy-preamp"]

[dependencies]
openwurli-dsp = { path = "../../crates/openwurli-dsp" }
hound = "3.5"
midly = "0.5"
