[package]
name = "preamp-bench"
version = "0.5.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Preamp DSP validation CLI — compare against SPICE reference data"

[features]
melange-preamp = ["openwurli-dsp/melange-preamp"]

[dependencies]
openwurli-dsp = { path = "../../crates/openwurli-dsp" }
hound = "3.5"
midly = "0.5"
