[package]
name = "reed-renderer"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Wurlitzer 200A reed modal synthesis — standalone WAV renderer"

[dependencies]
hound = "3.5"
openwurli-dsp = { path = "../../crates/openwurli-dsp" }
